--- a/.github/workflows/intergrate.yml
+++ b/.github/workflows/intergrate.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./../../src
+        working-directory: ./../../out
 
     steps:
       - name: Checkout 🛎️
